--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.2",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.23",
     "next-ga": "^2.3.4",
