--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.23",
+    "next": "^9.1.1",
     "next-ga": "^2.3.4",
     "next-redux-wrapper": "^2.0.0",
     "next-seo": "^1.11.2",
