--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "eslint . --ext .js --fix",
     "build": "next build",
     "start:local": "npm run build && cross-env LEGACY_RENDERER_URL=\"http://localhost:3000\" next start -p 3001",
-    "build:static": "next build && npm run export",
-    "export": "next export",
+    "build:static": "npm run export",
+    "export": "next build && next export",
     "start": "next build && next start",
     "postexport": "node post-export.js",
     "start:watch": "nodemon --exec \"npm run start\"",
